--- a/LAB8/LAB8-1/app/src/main/res/values/strings.xml
+++ b/LAB8/LAB8-1/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="delete">Delete</string>
     <string name="find">Find</string>
     <string name="textview">TextView</string>
+    <string name="product_price">Product Price</string>
+    <!--<string name="product_price">Product Price</string>-->
 </resources>
